<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Timer Calcetto</string>
    <string name="restart">Restart</string>
    <string name="reset">Reset</string>
    <string name="set_time">Set time</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="timer_zero">00:00</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="seconds_sample">45 sec</string>
    <string name="minutes_sample">6 min</string>
    <string name="image_description">Background image</string>
    <string name="minutes">%1$d min.</string>
    <string name="seconds">%1$d sec.</string>
    <string name="activity_start_timer">Start</string>
    <string name="activity_pause_timer">Pause</string>
    <string name="activity_stop_timer">Stop</string>

    <string name="number_picker_formatter">%02d</string>
    <string name="players">Giocatori</string>
    <string name="minutes_text">Minuti</string>
    <string name="seconds_text">Secondi</string>
    <string name="turn">Turni in porta</string>
    <string name="times_on_cage">Tempo in porta</string>
    <string name="ball_image">Soccer ball image</string>

</resources>