<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/playerPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:np_dividerColor="@color/colorPrimary"
        app:np_formatter="@string/number_picker_formatter"
        app:np_height="64dp"
        app:np_max="11"
        app:np_min="3"
        app:np_orientation="horizontal"
        app:np_selectedTextColor="@color/colorPrimary"
        app:np_selectedTextSize="@dimen/selected_text_size"
        app:np_textColor="@color/colorPrimary"
        app:np_textSize="@dimen/text_size"
        app:np_value="2"
        app:np_width="180dp" />

    <TextView
        android:id="@+id/playerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/players"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerPicker" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/turnOnCagePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerTextView"
        app:np_dividerColor="@color/colorPrimary"
        app:np_formatter="@string/number_picker_formatter"
        app:np_height="64dp"
        app:np_max="5"
        app:np_min="1"
        app:np_orientation="horizontal"
        app:np_selectedTextColor="@color/colorPrimary"
        app:np_selectedTextSize="@dimen/selected_text_size"
        app:np_textColor="@color/colorPrimary"
        app:np_textSize="@dimen/text_size"
        app:np_value="1"
        app:np_width="180dp" />

    <TextView
        android:id="@+id/turnTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/turn"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/turnOnCagePicker" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/minutesPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/turnTextView"
        app:np_dividerColor="@color/colorPrimary"
        app:np_formatter="@string/number_picker_formatter"
        app:np_height="180dp"
        app:np_max="119"
        app:np_min="0"
        app:np_orientation="vertical"
        app:np_selectedTextColor="@color/colorPrimary"
        app:np_selectedTextSize="@dimen/selected_text_size"
        app:np_textColor="@color/colorPrimary"
        app:np_textSize="@dimen/text_size"
        app:np_value="60"
        app:np_width="64dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/secondsPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/turnTextView"
        app:np_dividerColor="@color/colorPrimary"
        app:np_formatter="@string/number_picker_formatter"
        app:np_height="180dp"
        app:np_max="59"
        app:np_min="0"
        app:np_orientation="vertical"
        app:np_selectedTextColor="@color/colorPrimary"
        app:np_selectedTextSize="@dimen/selected_text_size"
        app:np_textColor="@color/colorPrimary"
        app:np_textSize="@dimen/text_size"
        app:np_value="0"
        app:np_width="64dp" />

    <TextView
        android:id="@+id/minutesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/minutes_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minutesPicker" />

    <TextView
        android:id="@+id/secondsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/seconds_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/secondsPicker" />


</android.support.constraint.ConstraintLayout>